src/test/ui/unknown-language-item.stderr
error[E0522]: definition of an unknown language item: `foo`
  --> $DIR/unknown-language-item.rs:14:1
   |
14 | #[lang = "foo"]
   | ^^^^^^^^^^^^^^^ definition of unknown language item `foo`

error: aborting due to previous error

